--- a/views/profile.pug
+++ b/views/profile.pug
@@ -25,7 +25,8 @@ block content
                         p.text-warning
                            | #{user.email}
                     #wishlist.tab-pane
-
+                        //p.text-warining
+                        //   | #{products.name}
                     #edit.tab-pane
                         form(method="POST", enctype="multipart/form-data", class="my-3")
                             .form-group.row
