--- a/views/productDetail.pug
+++ b/views/productDetail.pug
@@ -33,12 +33,21 @@ block content
                     button(type = "submit", class ="btn btn-warning ") Add to wish list
         .row
             h1(class = "col-md-12 text-center") Comments
-
         each comment in comments
-            div(class="row justify-content-center")
-                div(class = "col-md-8 card mb-3")
-                    h4(class = "card-title") #{comment.title}
-                    p(class = "card-text") #{comment.body}
+            //div(class="row justify-content-center")
+            //    div(class = "col-md-8 card mb-3")
+            //        h4(class = "card-title") #{comment.title}
+            //        p(class = "card-text") #{comment.body}
+            .row
+                    .col-sm-1
+                        .thumbnail
+                            img.img-responsive.user-photo(src=`${product.image}`)
+                    .col-sm-5
+                        .panel.panel-default
+                            .panel-heading
+                                strong #{user.username}
+                            .panel-body
+                                | #{comment.body}
 
         div(class="row justify-content-center")
             button(class="col-md-8 btn btn-warning text-center my-2", data-toggle="modal", data-target="#addComment") Add Comment
@@ -53,8 +62,8 @@ block content
                         div(class="modal-body")
                             form(method="POST", action=`/addComment/${product._id}`)
                                 .form-group
-                                    label(for="title") Title
-                                    input(type="text", class="form-control", name="title", placeholder="Comment Title")
+                                    label(for="title") User Name
+                                    input(type="text", class="form-control", name="title", value= user.name, readonly)
                                 .form-group
                                     label(for="body") Content
                                     textarea(class="form-control", rows=5, name="body", placeholder="Write comment..")
