--- a/views/products.pug
+++ b/views/products.pug
@@ -1,9 +1,10 @@
 extends default
 
 block content
+    link(rel="stylesheet", href="/stylesheets/containerBox.css")
     link(rel="stylesheet", href="/stylesheets/products.css")
 
-    .container-fluid.mt-3
+    .container-fluid.my-3.container-box
         div(id ="products",class = "row")
             div(id="addProduct", class='col-md-3 card')
                 a(href ="/addProduct")
