Slightly modify the front-end of default page.

--- a/views/default.pug
+++ b/views/default.pug
@@ -12,8 +12,8 @@ html
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js")
     body
         block header
-            .container-fluid
-                nav(class="row navbar navbar-expand-sm bg-light border-bottom", id="top-nav")
+            .container-fluid.sticky-top
+                nav(class="row navbar navbar-expand-sm bg-light border-bottom shadow", id="top-nav")
                     .col-md-7
                         ul.navbar-nav
                             li.nav-item
