--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,8 @@ block content
             .carousel-inner
                 .carousel-item.active
                     img(src="/images/OrangeJuice.jpg", alt="Find your dream taste")
+                    .carousel-caption#web-name
+                        h1 Find Your Dream Taste Here
                 .carousel-item
                     img(src='/images/lemonjuice.jpg', alt='Find your dream taste')
             a(class="carousel-control-prev", href="#welcome", data-slide="prev")
