--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,3 +10,10 @@
     background-color: #f1f1f1;
     font-family: arial;
 }
+
+#web-name {
+    font-family: 'Painter';
+    top: 15%;
+    left: -25%;
+    font-size: 64px;
+}
